--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         android:theme="@style/Theme.TodoListApp"
         tools:targetApi="31">
         <activity
+            android:name="com.apps.notification.NotificationExample"
+            android:exported="false" />
+        <activity
             android:name=".ui.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.apps.broadcastreceiver.BroadcastReceiverExample"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
