Adding firebase Auth

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
-
 android {
     compileSdk 32
 
@@ -51,6 +51,13 @@ dependencies {
     //SDP
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'com.google.firebase:firebase-auth-ktx' // Authentication
+    implementation 'com.google.android.gms:play-services-auth:20.2.0' //GOOGLE SIGN IN
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.2' // FireStore
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
