--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.apps.todolistapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,13 +15,19 @@
         android:theme="@style/Theme.TodoListApp"
         tools:targetApi="31">
         <activity
+            android:name="com.apps.loginsystem.RegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.apps.broadcastreceiver.BroadcastReceiverExample"
+            android:exported="false" />
+        <activity
             android:name="com.apps.notification.NotificationExample"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="false" />
         <activity
-            android:name="com.apps.broadcastreceiver.BroadcastReceiverExample"
+            android:name="com.apps.loginsystem.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
