--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,16 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
+    implementation 'com.google.firebase:firebase-messaging:23.0.7' //FCM, Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-auth-ktx' // Authentication
     implementation 'com.google.android.gms:play-services-auth:20.2.0' //GOOGLE SIGN IN
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.2' // FireStore
+
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
