--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.apps.todolistapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoListApp"
         tools:targetApi="31">
+        <activity
+            android:name="com.apps.loginsystem.LoginActivity"
+            android:exported="false" />
+        <service
+            android:name="com.apps.pushnotification.service.FirebaseService"
+            android:exported="false"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
         <activity
             android:name="com.apps.loginsystem.RegistrationActivity"
             android:exported="false" />
@@ -27,7 +41,7 @@
             android:name=".ui.MainActivity"
             android:exported="false" />
         <activity
-            android:name="com.apps.loginsystem.LoginActivity"
+            android:name="com.apps.pushnotification.ui.PushNotification"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
